# functional-programming-studio

./: .gitignore  README.md  sudoku-cp.rkt  sudoku-gen.rkt  sudoku.rkt  test.rkt
.github/workflows/: ci.yml
lean/: Main.lean  Sudoku.lean  lake-manifest.json  lakefile.lean
lean/Sudoku/: CP.lean  NorvigWF.lean
lean/Sudoku/CP/: IO.lean
santorini/: MCTS.hs  Main.hs  README.md  Santorini.hs  main.hs  mcts.hs  play.sh  santorini-bot.cabal  santorini.cabal  santorini.hs
santorini-arena/: README.md  play.sh  santorini-arena.cabal
santorini-arena/app/: Referee.hs
santorini-arena/src/Santorini/: Core.hs  Referee.hs
santorini-arena/src/Santorini/Engine/: Modern.hs
santorini/alphazero/: README.md  play-checkpoint.sh  pyproject.toml
santorini/alphazero/checkpoints/: pilot-5iter.pt
santorini/alphazero/src/santorini_az/: __init__.py  benchmark.py  game.py  mcts.py  network.py  protocol.py  selfplay.py  train.py
santorini/alphazero/tests/: test_differential.py  test_game.py  test_mcts.py  test_network.py  test_protocol.py
santorini/app/: LegacyPlayer.hs  ModernPlayer.hs  Oracle.hs  Referee.hs
santorini/src/Santorini/: Core.hs  Protocol.hs  Referee.hs  Search.hs
santorini/src/Santorini/Engine/: Modern.hs
santorini/src/Santorini/Legacy/: Game.hs  MCTS.hs
santorini/test/: Spec.hs
scripts/: diff-sudoku.sh  racket-solve.rkt
sudoku/: .fmt.rkt  README.md  sudoku-cp.rkt  sudoku-gen.rkt  sudoku.rkt  test.rkt
sudoku/lean/: Sudoku.lean
sudoku/lean/Sudoku/CP/: Model.lean  Propagation.lean  Search.lean
sudoku/tests/: cp-test.rkt  generator-test.rkt  model-test.rkt
