cabal-version:      2.4
name:               santorini-bot
version:            0.1.0.0
synopsis:           Santorini player (CS6963) -- zipper MCTS, repaired adversarial
build-type:         Simple

executable santorini-bot
    main-is:          Main.hs
    other-modules:    Santorini
                    , MCTS
    hs-source-dirs:   .
    build-depends:    base
                    , aeson
                    , random
                    , mtl
                    , bytestring
                    , unordered-containers
                    , containers
                    , time
    default-language: Haskell2010
    ghc-options:      -O2 -Wall -threaded -rtsopts "-with-rtsopts=-N"
