[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "santorini-alphazero"
version = "0.1.0"
description = "AlphaZero-style self-play trainer for the repository's Santorini rules"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "torch>=2.10",
]

[project.scripts]
santorini-az-train = "santorini_az.train:main"
santorini-az-player = "santorini_az.protocol:main"
santorini-az-benchmark = "santorini_az.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]
